[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenes/area de mort.gd" type="Script" id=1]
[ext_resource path="res://imatges/lava_tile4.png" type="Texture" id=2]
[ext_resource path="res://imatges/lava_tile3.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2619.5, 20.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "lava",
"speed": 5.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2609.5, 10.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 67, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 797, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 554, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 615, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 737, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 676, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( 493, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( 432, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( 371, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 310, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 249, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite12" type="AnimatedSprite" parent="."]
position = Vector2( 188, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite13" type="AnimatedSprite" parent="."]
position = Vector2( 128, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite14" type="AnimatedSprite" parent="."]
position = Vector2( 1345, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite15" type="AnimatedSprite" parent="."]
position = Vector2( 1284, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite16" type="AnimatedSprite" parent="."]
position = Vector2( 1223, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite17" type="AnimatedSprite" parent="."]
position = Vector2( 1162, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite18" type="AnimatedSprite" parent="."]
position = Vector2( 1040, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite19" type="AnimatedSprite" parent="."]
position = Vector2( 1101, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite20" type="AnimatedSprite" parent="."]
position = Vector2( 979, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite21" type="AnimatedSprite" parent="."]
position = Vector2( 918, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite22" type="AnimatedSprite" parent="."]
position = Vector2( 858, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite23" type="AnimatedSprite" parent="."]
position = Vector2( 1711, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite24" type="AnimatedSprite" parent="."]
position = Vector2( 2199, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite25" type="AnimatedSprite" parent="."]
position = Vector2( 2626, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite26" type="AnimatedSprite" parent="."]
position = Vector2( 2565, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite27" type="AnimatedSprite" parent="."]
position = Vector2( 2504, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite28" type="AnimatedSprite" parent="."]
position = Vector2( 2748, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite29" type="AnimatedSprite" parent="."]
position = Vector2( 2809, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite30" type="AnimatedSprite" parent="."]
position = Vector2( 2077, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite31" type="AnimatedSprite" parent="."]
position = Vector2( 1894, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite32" type="AnimatedSprite" parent="."]
position = Vector2( 2443, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite33" type="AnimatedSprite" parent="."]
position = Vector2( 1406, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite34" type="AnimatedSprite" parent="."]
position = Vector2( 2382, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite35" type="AnimatedSprite" parent="."]
position = Vector2( 1650, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite36" type="AnimatedSprite" parent="."]
position = Vector2( 1528, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite37" type="AnimatedSprite" parent="."]
position = Vector2( 1589, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite38" type="AnimatedSprite" parent="."]
position = Vector2( 2016, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite39" type="AnimatedSprite" parent="."]
position = Vector2( 1955, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite40" type="AnimatedSprite" parent="."]
position = Vector2( 2138, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite41" type="AnimatedSprite" parent="."]
position = Vector2( 2260, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite42" type="AnimatedSprite" parent="."]
position = Vector2( 1467, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite43" type="AnimatedSprite" parent="."]
position = Vector2( 1772, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite44" type="AnimatedSprite" parent="."]
position = Vector2( 1833, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite45" type="AnimatedSprite" parent="."]
position = Vector2( 2321, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite46" type="AnimatedSprite" parent="."]
position = Vector2( 2687, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite47" type="AnimatedSprite" parent="."]
position = Vector2( 5245, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite48" type="AnimatedSprite" parent="."]
position = Vector2( 5184, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite49" type="AnimatedSprite" parent="."]
position = Vector2( 5123, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite50" type="AnimatedSprite" parent="."]
position = Vector2( 5002, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite51" type="AnimatedSprite" parent="."]
position = Vector2( 5062, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite52" type="AnimatedSprite" parent="."]
position = Vector2( 4941, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite53" type="AnimatedSprite" parent="."]
position = Vector2( 4881, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite54" type="AnimatedSprite" parent="."]
position = Vector2( 4820, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite55" type="AnimatedSprite" parent="."]
position = Vector2( 4760, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite56" type="AnimatedSprite" parent="."]
position = Vector2( 4699, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite57" type="AnimatedSprite" parent="."]
position = Vector2( 4639, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite58" type="AnimatedSprite" parent="."]
position = Vector2( 4578, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite59" type="AnimatedSprite" parent="."]
position = Vector2( 4517, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite60" type="AnimatedSprite" parent="."]
position = Vector2( 4456, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite61" type="AnimatedSprite" parent="."]
position = Vector2( 4395, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite62" type="AnimatedSprite" parent="."]
position = Vector2( 4273, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite63" type="AnimatedSprite" parent="."]
position = Vector2( 4212, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite64" type="AnimatedSprite" parent="."]
position = Vector2( 4151, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite65" type="AnimatedSprite" parent="."]
position = Vector2( 4090, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite66" type="AnimatedSprite" parent="."]
position = Vector2( 4029, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite67" type="AnimatedSprite" parent="."]
position = Vector2( 3968, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite68" type="AnimatedSprite" parent="."]
position = Vector2( 3907, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite69" type="AnimatedSprite" parent="."]
position = Vector2( 3785, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite70" type="AnimatedSprite" parent="."]
position = Vector2( 3724, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite71" type="AnimatedSprite" parent="."]
position = Vector2( 3541, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite72" type="AnimatedSprite" parent="."]
position = Vector2( 3419, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite73" type="AnimatedSprite" parent="."]
position = Vector2( 3236, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite74" type="AnimatedSprite" parent="."]
position = Vector2( 3297, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite75" type="AnimatedSprite" parent="."]
position = Vector2( 3175, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite76" type="AnimatedSprite" parent="."]
position = Vector2( 3114, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite77" type="AnimatedSprite" parent="."]
position = Vector2( 3053, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite78" type="AnimatedSprite" parent="."]
position = Vector2( 2992, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite79" type="AnimatedSprite" parent="."]
position = Vector2( 2931, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite80" type="AnimatedSprite" parent="."]
position = Vector2( 2870, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite81" type="AnimatedSprite" parent="."]
position = Vector2( 3358, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite82" type="AnimatedSprite" parent="."]
position = Vector2( 3663, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite83" type="AnimatedSprite" parent="."]
position = Vector2( 3480, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite84" type="AnimatedSprite" parent="."]
position = Vector2( 3602, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite85" type="AnimatedSprite" parent="."]
position = Vector2( 3846, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )

[node name="AnimatedSprite86" type="AnimatedSprite" parent="."]
position = Vector2( 4334, 16 )
scale = Vector2( 0.953125, 0.882813 )
frames = SubResource( 2 )
animation = "lava"
offset = Vector2( -48.2623, -15.0088 )
