extends Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = "text"
var cont=1

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	animaciolava()
func animaciolava():
	print("b")
	$AnimatedSprite.play("lava")
	$AnimatedSprite2.play('lava')
	$AnimatedSprite3.play('lava')
	$AnimatedSprite4.play('lava')
	$AnimatedSprite5.play('lava')
	$AnimatedSprite6.play('lava')
	$AnimatedSprite7.play('lava')
	$AnimatedSprite8.play('lava')
	$AnimatedSprite9.play('lava')
	$AnimatedSprite10.play('lava')
	$AnimatedSprite11.play('lava')
	$AnimatedSprite12.play('lava')
	$AnimatedSprite13.play('lava')
	$AnimatedSprite14.play('lava')
	$AnimatedSprite15.play('lava')
	$AnimatedSprite16.play('lava')
	$AnimatedSprite17.play('lava')
	$AnimatedSprite18.play('lava')
	$AnimatedSprite19.play('lava')
	$AnimatedSprite20.play('lava')
	$AnimatedSprite21.play('lava')
	$AnimatedSprite22.play('lava')
	$AnimatedSprite23.play('lava')
	$AnimatedSprite24.play('lava')
	$AnimatedSprite25.play('lava')
	$AnimatedSprite26.play('lava')
	$AnimatedSprite27.play('lava')
	$AnimatedSprite28.play('lava')
	$AnimatedSprite29.play('lava')
	$AnimatedSprite30.play('lava')
	$AnimatedSprite31.play('lava')
	$AnimatedSprite32.play('lava')
	$AnimatedSprite33.play('lava')
	$AnimatedSprite34.play('lava')
	$AnimatedSprite35.play('lava')
	$AnimatedSprite36.play('lava')
	$AnimatedSprite37.play('lava')
	$AnimatedSprite38.play('lava')
	$AnimatedSprite39.play('lava')
	$AnimatedSprite40.play('lava')
	$AnimatedSprite41.play('lava')
	$AnimatedSprite42.play('lava')
	$AnimatedSprite43.play('lava')
	$AnimatedSprite44.play('lava')
	$AnimatedSprite45.play('lava')
	$AnimatedSprite46.play('lava')
	$AnimatedSprite47.play('lava')
	$AnimatedSprite48.play('lava')
	$AnimatedSprite49.play('lava')
	$AnimatedSprite50.play('lava')
	$AnimatedSprite51.play('lava')
	$AnimatedSprite52.play('lava')
	$AnimatedSprite53.play('lava')
	$AnimatedSprite54.play('lava')
	$AnimatedSprite55.play('lava')
	$AnimatedSprite56.play('lava')
	$AnimatedSprite57.play('lava')
	$AnimatedSprite58.play('lava')
	$AnimatedSprite59.play('lava')
	$AnimatedSprite60.play('lava')
	$AnimatedSprite61.play('lava')
	$AnimatedSprite62.play('lava')
	$AnimatedSprite63.play('lava')
	$AnimatedSprite64.play('lava')
	$AnimatedSprite65.play('lava')
	$AnimatedSprite66.play('lava')
	$AnimatedSprite67.play('lava')
	$AnimatedSprite68.play('lava')
	$AnimatedSprite69.play('lava')
	$AnimatedSprite70.play('lava')
	$AnimatedSprite71.play('lava')
	$AnimatedSprite72.play('lava')
	$AnimatedSprite73.play('lava')
	$AnimatedSprite74.play('lava')
	$AnimatedSprite75.play('lava')
	$AnimatedSprite76.play('lava')
	$AnimatedSprite77.play('lava')
	$AnimatedSprite78.play('lava')
	$AnimatedSprite79.play('lava')
	$AnimatedSprite80.play('lava')
	$AnimatedSprite81.play('lava')
	$AnimatedSprite82.play('lava')
	$AnimatedSprite83.play('lava')
	$AnimatedSprite84.play('lava')
	$AnimatedSprite85.play('lava')
	$AnimatedSprite86.play('lava')
